--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -135,6 +135,71 @@ body {
   position: relative;
   top: 50px;
 }
+#gallery .image-box, #gallery .text-box {
+  border-radius: 10px;
+}
+#gallery .image-box:not(:last-child), #gallery .text-box:not(:last-child) {
+  margin-bottom: 10px;
+}
+#gallery .image-box {
+  width: 300px;
+  opacity: 0.5;
+  transform: scale(0.95);
+  margin-right: 10px;
+}
+#gallery .image-box:not(.tall) {
+  height: 400px;
+}
+#gallery .image-box.tall {
+  height: 600px;
+  animation: levitation 4s ease-in-out infinite;
+}
+@keyframes levitation {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+#gallery .image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+#gallery .image-box:nth-child(1) {
+  transition-delay: 0.1s;
+}
+#gallery .image-box:nth-child(2) {
+  transition-delay: 0.2s;
+}
+#gallery .image-box:nth-child(3) {
+  transition-delay: 0.3s;
+}
+#gallery .image-box:nth-child(4) {
+  transition-delay: 0.4s;
+}
+#gallery .image-box:nth-child(5) {
+  transition-delay: 0.5s;
+}
+#gallery .image-box:nth-child(6) {
+  transition-delay: 0.6s;
+}
+#gallery .image-box.active {
+  opacity: 1;
+  transform: scale(1);
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+#gallery .text-box {
+  background: rgb(31, 31, 31);
+  box-sizing: border-box;
+  padding: 20px;
+  width: 300px;
+}
+#gallery .text-box h3 {
+  color: rgb(200, 200, 200);
+}
 
 /* width */
 ::-webkit-scrollbar {
