--- a/scss/layout/_gallery.scss
+++ b/scss/layout/_gallery.scss
@@ -9,4 +9,67 @@
         position: relative;
         top: 50px;
     }
+
+    .image-box, .text-box {
+        border-radius: 10px;
+
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
+    }
+
+    .image-box {
+        width: 300px;
+        opacity: 0.5;
+        transform: scale(0.95);
+        margin-right: 10px;
+
+        &:not(.tall) {
+            height: 400px;
+        }
+
+        &.tall {
+            height: 600px;
+            animation: levitation 4s ease-in-out infinite;
+        }
+
+        @keyframes levitation {
+            0%, 100% {
+               transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        @for $i from 1 through 6 {
+            &:nth-child(#{$i}) {
+                transition-delay: $i * 0.1s;
+            }
+        }
+
+        &.active {
+            opacity: 1;
+            transform: scale(1);
+            transition: transform 0.5s ease, opacity 0.5s ease;
+        }
+    }
+
+    .text-box {
+        background: $background-alt;
+        box-sizing: border-box;
+        padding: 20px;
+        width: 300px;
+
+        h3 {
+            color: $secondary-font-color;
+        }
+    }
 }
