--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-#gallery, #about {
+#blog, #gallery, #about {
   min-height: 100vh;
   width: 100%;
   position: relative;
@@ -13,6 +13,14 @@
   left: 0;
   height: 100%;
   width: 100%;
+}
+
+.article {
+  flex: 1;
+  margin: 0 15px;
+  background: rgb(31, 31, 31);
+  padding: 20px;
+  border-radius: 5px;
 }
 
 html {
@@ -201,6 +209,114 @@ body {
   color: rgb(200, 200, 200);
 }
 
+/* Blog Section ----------------------------- */
+#blog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10vh;
+}
+#blog .blog-container {
+  width: 80%;
+  padding: 50px;
+}
+#blog .blog-container a {
+  text-decoration: none;
+  color: hsl(225, 100%, 75%);
+  transition: color 0.3s;
+}
+#blog .blog-container a:hover {
+  color: hsl(225, 100%, 55%);
+}
+
+.main {
+  width: 80%;
+  margin: 50px auto;
+}
+
+.article img,
+.featured-article img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+/* Featured Article Styles */
+.featured-article {
+  margin-bottom: 50px;
+}
+.featured-article h1 {
+  font-size: 2.5rem;
+  color: var(--secondary-font-color);
+  margin: 15px 0;
+}
+.featured-article p {
+  font-size: 1.2rem;
+  color: var(--primary-font-color);
+  margin-bottom: 20px;
+}
+
+/* Smaller Articles Styles */
+.smaller-articles {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.article h2 {
+  font-size: 1.8rem;
+  color: var(--secondary-font-color);
+  margin: 15px 0;
+}
+.article p {
+  font-size: 1rem;
+  color: var(--primary-font-color);
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+  transition: color 0.3s;
+}
+a:hover {
+  filter: brightness(0.9);
+}
+
+/* Media Queries ------------------ */
+/* Tablet */
+@media screen and (max-width: 1025px) {
+  .main {
+    width: 90%;
+  }
+  .featured-article h1 {
+    font-size: 2.2rem;
+  }
+  .article {
+    margin-bottom: 20px;
+  }
+  .article h2 {
+    font-size: 1.7rem;
+  }
+  .smaller-articles {
+    flex-direction: column;
+  }
+}
+/* Smartphone Vertical */
+@media screen and (max-width: 600px) {
+  .featured-article h1 {
+    font-size: 1.5rem;
+  }
+  .featured-article p {
+    font-size: 1rem;
+  }
+  .article {
+    margin: 10px 0;
+  }
+  .article h2 {
+    font-size: 1.3rem;
+  }
+}
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
