--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -23,9 +23,38 @@
     border-radius: 5px;
 }
 
+%article-img {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    margin-bottom: 15px;
+}
+
 // Mixins for common styles
 @mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@mixin blog-title($font-size) {
+    font-size: $font-size;
+    color: $secondary-font-color;
+    margin: 15px 0;
+}
+
+// Shared Animations
+.fadeInUp {
+    animation: fadeInUp 1s ease forwards;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
