--- a/scss/layout/_blog.scss
+++ b/scss/layout/_blog.scss
@@ -17,113 +17,91 @@
                 color: darken($primary-color, 20%);
             }
         }
-    }
-}
 
-.main {
-    width: 80%;
-    margin: 50px auto;
-}
+        .featured-article {
+            margin-bottom: 50px;
+            opacity: 0;
 
-.article img,
-.featured-article img {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    margin-bottom: 15px;
-}
+            h3 {
+                @include blog-title(2.5rem);
+            }
 
-/* Featured Article Styles */
-.featured-article {
-    margin-bottom: 50px;
+            p {
+                font-size: 1.2rem;
+                margin-bottom: 20px;
+            }
 
-    h1 {
-        font-size: 2.5rem;
-        color: var(--secondary-font-color);
-        margin: 15px 0;
-    }
+            img {
+                @extend %article-img;
+            }
+        }
 
-    p {
-        font-size: 1.2rem;
-        color: var(--primary-font-color);
-        margin-bottom: 20px;
-    }
-}
+        .smaller-articles {
+            display: flex;
+            justify-content: space-between;
 
-/* Smaller Articles Styles */
-.smaller-articles {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+            .article {
+                @extend %article;
+                opacity: 0;
 
-.article {
-    @extend %article;
+                h3 {
+                    @include blog-title(1.8rem);
+                }
 
-    h2 {
-        font-size: 1.8rem;
-        color: var(--secondary-font-color);
-        margin: 15px 0;
-    }
+                p {
+                    font-size: 1rem;
+                }
 
-    p {
-        font-size: 1rem;
-        color: var(--primary-font-color);
-    }
-}
-
-a {
-    text-decoration: none;
-    color: var(--primary-color);
-    transition: color 0.3s;
-
-    &:hover {
-        filter: brightness(0.9);
+                img {
+                    @extend %article-img;
+                }
+            }
+        }
     }
 }
 
 /* Media Queries ------------------ */
 
 /* Tablet */
-@media screen and (max-width: 1025px) {
-    .main {
-        width: 90%;
-    }
+// @media screen and (max-width: 1025px) {
+//     .main {
+//         width: 90%;
+//     }
 
-    .featured-article h1 {
-        font-size: 2.2rem;
-    }
+//     .featured-article h1 {
+//         font-size: 2.2rem;
+//     }
 
-    .article {
-        margin-bottom: 20px;
+//     .article {
+//         margin-bottom: 20px;
 
-        h2 {
-            font-size: 1.7rem;
-        }
-    }
+//         h2 {
+//             font-size: 1.7rem;
+//         }
+//     }
 
-    .smaller-articles {
-        flex-direction: column;
-    }
-}
+//     .smaller-articles {
+//         flex-direction: column;
+//     }
+// }
 
 /* Smartphone Vertical */
-@media screen and (max-width: 600px) {
-    .featured-article {
-        h1 {
-            font-size: 1.5rem;
-        }
+// @media screen and (max-width: 600px) {
+//     .featured-article {
+//         h1 {
+//             font-size: 1.5rem;
+//         }
 
-        p {
-            font-size: 1rem;
-        }
-    }
+//         p {
+//             font-size: 1rem;
+//         }
+//     }
 
-    .article {
-        margin: 10px 0;
+//     .article {
+//         margin: 10px 0;
 
-        h2 {
-            font-size: 1.3rem;
-        }
-    }
-}
+//         h2 {
+//             font-size: 1.3rem;
+//         }
+//     }
+// }
