--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-#blog, #gallery, #about {
+#contact, #blog, #gallery, #about {
   min-height: 100vh;
   width: 100%;
   position: relative;
@@ -28,6 +28,16 @@
   max-height: 300px;
   object-fit: cover;
   margin-bottom: 15px;
+}
+
+#contact .contact-container .form-container form .grid-container .form-group input {
+  background: #525252;
+  border: none;
+  border-radius: 8px;
+  padding: 15px;
+  color: white;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 .fadeInUp {
@@ -280,6 +290,38 @@ body {
 /* Media Queries ------------------ */
 /* Tablet */
 /* Smartphone Vertical */
+/* Blog Section ----------------------------- */
+#contact {
+  display: grid;
+  place-items: center;
+}
+#contact .contact-container {
+  opacity: 1;
+}
+#contact .contact-container h2 {
+  font-size: clamp(2rem, 5vw, 3rem);
+}
+#contact .contact-container .form-container {
+  background: rgb(31, 31, 31);
+  padding: 20px;
+  width: 80vw;
+  margin: 0 auto;
+  border-radius: 20px;
+  font-size: 1rem;
+}
+#contact .contact-container .form-container form .grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+#contact .contact-container .form-container form .grid-container .form-group {
+  display: flex;
+  flex-direction: column;
+}
+#contact .contact-container .form-container form .grid-container .form-group label {
+  color: white;
+  margin-bottom: 5px;
+}
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
