--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -30,7 +30,7 @@
   margin-bottom: 15px;
 }
 
-#contact .contact-container .form-container form .grid-container .form-group input {
+#contact .contact-container .form-container form .message textarea, #contact .contact-container .form-container form .grid-container .form-group input {
   background: #525252;
   border: none;
   border-radius: 8px;
@@ -296,7 +296,7 @@ body {
   place-items: center;
 }
 #contact .contact-container {
-  opacity: 1;
+  opacity: 0;
 }
 #contact .contact-container h2 {
   font-size: clamp(2rem, 5vw, 3rem);
@@ -322,6 +322,43 @@ body {
   color: white;
   margin-bottom: 5px;
 }
+#contact .contact-container .form-container form .grid-container .form-group input:focus {
+  outline: none;
+  background: rgb(56.5, 56.5, 56.5);
+}
+#contact .contact-container .form-container form .message label {
+  position: relative;
+  top: 15px;
+  color: white;
+}
+#contact .contact-container .form-container form .message textarea {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 20px 20px 0 0;
+  height: 200px;
+  resize: vertical;
+}
+#contact .contact-container .form-container form .message textarea:focus {
+  outline: none;
+  background: rgb(56.5, 56.5, 56.5);
+}
+#contact .contact-container .form-container form button {
+  width: 100%;
+  padding: 15px;
+  background: rgb(158.5, 158.5, 158.5);
+  border-radius: 25px;
+  border: none;
+  color: rgb(18, 18, 18);
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s, color 0.3s;
+}
+#contact .contact-container .form-container form button:hover {
+  background: rgb(56.5, 56.5, 56.5);
+  color: rgb(200, 200, 200);
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
