--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -379,7 +379,7 @@ body {
   z-index: 100;
   font-size: 1.2rem;
 }
-.toast-container .toast:show {
+.toast-container .toast.show {
   visibility: visible;
   animation: fadeIn 0.5s, fadeOut 0.5s 9.5s;
 }
