--- a/scss/layout/_toast.scss
+++ b/scss/layout/_toast.scss
@@ -18,7 +18,7 @@
         z-index: 100;
         font-size: 1.2rem;
         
-        &:show {
+        &.show {
             visibility: visible;
             animation: fadeIn 0.5s, fadeOut 0.5s 9.5s;
         }
