--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -41,8 +41,9 @@
 }
 
 // Mixins for common styles
-@mixin flex-center {
+@mixin flex-center($direction: row) {
     display: flex;
+    flex-direction: $direction;
     justify-content: center;
     align-items: center;
 }
