--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -122,6 +122,78 @@ body {
 .nav-wrapper .nav-right .menu-icon.active .bar3 {
   transform: translateY(-0.75rem) rotate(45deg);
 }
+.nav-wrapper #nav {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  opacity: 1;
+  z-index: 2;
+}
+.nav-wrapper #nav .strip {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 20%;
+  background: rgb(43.5, 43.5, 43.5);
+  transform: translateY(0);
+  transition: transform 0.5s ease;
+  z-index: 1;
+}
+.nav-wrapper #nav .strip:nth-child(1) {
+  left: 0%;
+  transition-delay: 0s;
+}
+.nav-wrapper #nav .strip:nth-child(2) {
+  left: 20%;
+  transition-delay: 0.1s;
+}
+.nav-wrapper #nav .strip:nth-child(3) {
+  left: 40%;
+  transition-delay: 0.2s;
+}
+.nav-wrapper #nav .strip:nth-child(4) {
+  left: 60%;
+  transition-delay: 0.3s;
+}
+.nav-wrapper #nav .strip:nth-child(5) {
+  left: 80%;
+  transition-delay: 0.4s;
+}
+.nav-wrapper #nav.active {
+  opacity: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.nav-wrapper #nav.active .strip {
+  transform: translateY(0);
+}
+.nav-wrapper #nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 15%;
+  z-index: 10;
+  transform: translateY(0);
+  transition: transform 0.5s ease;
+}
+.nav-wrapper #nav ul li {
+  margin: 1rem 0;
+}
+.nav-wrapper #nav ul li a {
+  font-size: 4rem;
+  font-weight: 100;
+  text-decoration: none;
+  color: rgb(230, 230, 230);
+}
+.nav-wrapper #nav ul li a:hover {
+  font-weight: 300;
+  padding-bottom: 10pxa;
+  border-bottom: 1 px solid rgb(230, 230, 230);
+}
 
 /* Home Section ------------------------------- */
 .video-container {
