--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -60,4 +60,68 @@
             }
         }
     }
+
+    #nav {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        opacity: 1;
+        z-index: 2;
+        
+        .strip {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 20%;
+            background: lighten($background, 10%);
+            transform: translateY(0);
+            transition: transform 0.5s ease;
+            z-index: 1;
+
+            @for $i from 1 through 5 {
+                &:nth-child(#{$i}) {
+                    left: 20% * ($i - 1);
+                    transition-delay: 0.1s * ($i - 1);
+                }
+            }
+        }
+
+        &.active {
+            opacity: 1;
+            position: fixed;
+            top: 0;
+            left: 0;
+
+            .strip {
+                transform: translateY(0);
+            }
+        }
+
+        ul {
+            list-style: none;
+            @include flex-center(column);
+            position: relative;
+            top: 15%;
+            z-index: 10;
+            transform: translateY(0);
+            transition: transform 0.5s ease;
+
+            li {
+                margin: 1rem 0;
+
+                a {
+                    font-size: 4rem;
+                    font-weight: 100;
+                    text-decoration: none;
+                    color: $nav-font-color;
+
+                    &:hover {
+                        font-weight: 300;
+                        padding-bottom: 10pxa;
+                        border-bottom: 1 px solid $nav-font-color;
+                    }
+                }
+            }
+        }
+    }
 }
