--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -126,7 +126,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  opacity: 1;
+  opacity: 0;
   z-index: 2;
 }
 .nav-wrapper #nav .strip {
@@ -135,7 +135,7 @@ body {
   bottom: 0;
   width: 20%;
   background: rgb(43.5, 43.5, 43.5);
-  transform: translateY(0);
+  transform: translateY(-100%);
   transition: transform 0.5s ease;
   z-index: 1;
 }
@@ -177,11 +177,28 @@ body {
   position: relative;
   top: 15%;
   z-index: 10;
-  transform: translateY(0);
+  transform: translateY(-100%);
   transition: transform 0.5s ease;
 }
 .nav-wrapper #nav ul li {
   margin: 1rem 0;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+.nav-wrapper #nav ul li:nth-child(1) {
+  transition-delay: 0.5s;
+}
+.nav-wrapper #nav ul li:nth-child(2) {
+  transition-delay: 0.6s;
+}
+.nav-wrapper #nav ul li:nth-child(3) {
+  transition-delay: 0.7s;
+}
+.nav-wrapper #nav ul li:nth-child(4) {
+  transition-delay: 0.8s;
+}
+.nav-wrapper #nav ul li:nth-child(5) {
+  transition-delay: 0.9s;
 }
 .nav-wrapper #nav ul li a {
   font-size: 4rem;
@@ -191,8 +208,14 @@ body {
 }
 .nav-wrapper #nav ul li a:hover {
   font-weight: 300;
-  padding-bottom: 10pxa;
-  border-bottom: 1 px solid rgb(230, 230, 230);
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(230, 230, 230);
+}
+.nav-wrapper #nav.active ul {
+  transform: translateY(0);
+}
+.nav-wrapper #nav.active ul li {
+  opacity: 1;
 }
 
 /* Home Section ------------------------------- */
