--- a/scss/layout/_blog.scss
+++ b/scss/layout/_blog.scss
@@ -8,6 +8,11 @@
         width: 80%;
         padding: 50px;
 
+        @include tablet-horizontal-large {
+            width: 90%;
+            padding: 5%;
+        }
+
         a {
             text-decoration: none;
             color: $primary-color;
