Improve responsive styles for tablet layouts
Added media queries and SCSS mixins to enhance layout and typography for tablet horizontal and vertical orientations across navbar, about, blog, and home sections. These changes improve readability and spacing on devices with max-widths of 1181px (landscape) and 1025px (portrait).

--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -226,6 +226,11 @@ body {
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(230, 230, 230);
 }
+@media (orientation: landscape) and (max-width: 1181px) {
+  .nav-wrapper #nav ul li a {
+    font-size: 3rem;
+  }
+}
 .nav-wrapper #nav.active ul {
   transform: translateY(0);
 }
@@ -266,6 +271,11 @@ body {
     color: white;
   }
 }
+@media (orientation: portrait) and (max-width: 1025px) {
+  .overlay h1 {
+    font-size: 4rem;
+  }
+}
 .overlay p {
   color: white;
   position: relative;
@@ -287,10 +297,32 @@ body {
 #about .about-container h2 {
   font-size: clamp(2rem, 5vw, 3rem);
 }
+@media (orientation: landscape) and (max-width: 1181px) {
+  #about .about-container h2 {
+    margin-left: 5%;
+  }
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #about .about-container h2 {
+    margin-left: 5%;
+  }
+}
 #about .about-container p {
   width: 75ch;
   font-size: clamp(1rem, 5vw, 1.5rem);
   line-height: 1.8;
+}
+@media (orientation: landscape) and (max-width: 1181px) {
+  #about .about-container p {
+    width: 90%;
+    margin-left: 5%;
+  }
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #about .about-container p {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
 #about .about-container .phrase {
   color: #636363;
@@ -457,9 +489,23 @@ body {
   color: rgb(200, 200, 200);
   margin: 15px 0;
 }
+@media (orientation: landscape) and (max-width: 1181px) {
+  #blog .blog-container .smaller-articles .article h3 {
+    font-size: 1.4rem;
+  }
+}
 #blog .blog-container .smaller-articles .article p {
   font-size: 1rem;
 }
+@media (orientation: landscape) and (max-width: 1181px) {
+  #blog .blog-container .smaller-articles .article p {
+    font-size: 0.9rem;
+  }
+}
+#blog .blog-container .smaller-articles .article img {
+  min-height: 300px;
+}
+
 /* Media Queries ------------------ */
 /* Tablet */
 /* Smartphone Vertical */
