--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -34,6 +34,10 @@
                 color: white;
             }
         }
+
+        @include tablet-vertical {
+            font-size: 4rem;
+        }
     }
 
     p {
