--- a/scss/layout/_blog.scss
+++ b/scss/layout/_blog.scss
@@ -51,14 +51,22 @@
 
                 h3 {
                     @include blog-title(1.8rem);
+
+                    @include tablet-horizontal {
+                        font-size: 1.4rem;
+                    }
                 }
 
                 p {
                     font-size: 1rem;
-                }
 
+                    @include tablet-horizontal {
+                        font-size: 0.9rem;
+                    }
+                }
                 img {
                     @extend %article-img;
+                    min-height: 300px;
                 }
             }
         }
