Improve mobile responsiveness for blog and gallery
Added media queries and SCSS mixins to enhance layout and typography for portrait orientation and smaller screens. Gallery and blog sections now adjust flex direction, sizing, and spacing for better mobile usability.

--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -372,11 +372,13 @@ body {
     margin: 0 2.5%;
   }
 }
-#gallery .image-box, #gallery .text-box {
-  border-radius: 10px;
-}
-#gallery .image-box:not(:last-child), #gallery .text-box:not(:last-child) {
-  margin-bottom: 10px;
+@media (orientation: portrait) and (max-width: 1025px) {
+  #gallery .gallery-container {
+    flex-direction: column;
+    height: auto;
+    top: 100px;
+    padding-bottom: 10vh;
+  }
 }
 #gallery .image-box {
   width: 300px;
@@ -390,6 +392,11 @@ body {
 #gallery .image-box.tall {
   height: 600px;
   animation: levitation 4s ease-in-out infinite;
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #gallery .image-box.tall {
+    animation: none;
+  }
 }
 @keyframes levitation {
   0%, 100% {
@@ -437,6 +444,22 @@ body {
 #gallery .text-box h3 {
   color: rgb(200, 200, 200);
 }
+#gallery .image-box, #gallery .text-box {
+  border-radius: 10px;
+}
+#gallery .image-box:not(:last-child), #gallery .text-box:not(:last-child) {
+  margin-bottom: 10px;
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #gallery .image-box, #gallery .text-box {
+    width: 95%;
+    margin-right: unset;
+    margin: auto;
+    margin-bottom: 10px;
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 
 /* Blog Section ----------------------------- */
 #blog {
@@ -473,6 +496,11 @@ body {
   color: rgb(200, 200, 200);
   margin: 15px 0;
 }
+@media (orientation: portrait) and (max-width: 1025px) {
+  #blog .blog-container .featured-article h3 {
+    font-size: 2.2rem;
+  }
+}
 #blog .blog-container .featured-article p {
   font-size: 1.2rem;
   margin-bottom: 20px;
@@ -481,8 +509,18 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media (orientation: portrait) and (max-width: 1025px) {
+  #blog .blog-container .smaller-articles {
+    flex-direction: column;
+  }
+}
 #blog .blog-container .smaller-articles .article {
   opacity: 0;
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #blog .blog-container .smaller-articles .article {
+    margin-bottom: 20px;
+  }
 }
 #blog .blog-container .smaller-articles .article h3 {
   font-size: 1.8rem;
@@ -492,6 +530,11 @@ body {
 @media (orientation: landscape) and (max-width: 1181px) {
   #blog .blog-container .smaller-articles .article h3 {
     font-size: 1.4rem;
+  }
+}
+@media (orientation: portrait) and (max-width: 1025px) {
+  #blog .blog-container .smaller-articles .article h3 {
+    font-size: 1.7rem;
   }
 }
 #blog .blog-container .smaller-articles .article p {
