--- a/scss/layout/_blog.scss
+++ b/scss/layout/_blog.scss
@@ -29,6 +29,10 @@
 
             h3 {
                 @include blog-title(2.5rem);
+
+                @include tablet-vertical {
+                    font-size: 2.2rem;
+                }
             }
 
             p {
@@ -45,15 +49,27 @@
             display: flex;
             justify-content: space-between;
 
+            @include tablet-vertical {
+                flex-direction: column;
+            }
+
             .article {
                 @extend %article;
                 opacity: 0;
+
+                @include tablet-vertical {
+                    margin-bottom: 20px;
+                }
 
                 h3 {
                     @include blog-title(1.8rem);
 
                     @include tablet-horizontal {
                         font-size: 1.4rem;
+                    }
+
+                    @include tablet-vertical {
+                        font-size: 1.7rem;
                     }
                 }
 
@@ -64,6 +80,7 @@
                         font-size: 0.9rem;
                     }
                 }
+
                 img {
                     @extend %article-img;
                     min-height: 300px;
