Improve mobile responsiveness for blog and contact sections
Added new SCSS mixins for mobile breakpoints and applied them to blog and contact layouts for better mobile styling. Updated script.js to adjust IntersectionObserver thresholds based on device width, enhancing animation triggers on mobile devices.

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -89,6 +89,24 @@
     }
 }
 
+@mixin smartphone-horizontal {
+    @media (orientation: landscape) and (max-height: 450) {
+        @content;
+    }
+}
+
+@mixin smartphone-vertical {
+    @media (max-width: 600px) {
+        @content;
+    }
+}
+
+@mixin smartphone-small {
+    @media (orientation: portrait) and (max-width: 700px) {
+        @content;
+    }
+}
+
 // Shared Animations
 .fadeInUp {
     animation: fadeInUp 1s ease forwards;
