--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -50,22 +50,22 @@
             justify-content: space-around;
             cursor: pointer;
             z-index: 10;
-            
+
             div {
                 height: 0.25rem;
                 background-color: $nav-font-color;
                 transition: all 0.3s ease-in-out;
             }
-            
+
             &.active {
                 .bar1 {
                     transform: translateY(0.6rem) rotate(-45deg);
                 }
-    
+
                 .bar2 {
                     opacity: 0;
                 }
-    
+
                 .bar3 {
                     transform: translateY(-0.75rem) rotate(45deg);
                 }
@@ -79,7 +79,7 @@
         overflow: hidden;
         opacity: 0;
         z-index: 2;
-        
+
         .strip {
             position: absolute;
             top: 0;
@@ -123,7 +123,7 @@
                 opacity: 0;
                 transition: opacity 1s ease;
 
-                 @for $i from 1 through 5 {
+                @for $i from 1 through 5 {
                     &:nth-child(#{$i}) {
                         transition-delay: 0.5s + 0.1s * ($i - 1);
                     }
@@ -143,6 +143,14 @@
 
                     @include tablet-horizontal {
                         font-size: 3rem;
+                    }
+
+                    @include smartphone-vertical {
+                        font-size: 3rem;
+                    }
+
+                    @include smartphone-small {
+                        font-size: 2.5rem;
                     }
                 }
             }
