--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -2,6 +2,11 @@
 #about {
     @extend %section;
     height: 100vh;
+    
+    @include smartphone-horizontal {
+            padding-top: 15vh;
+            padding-bottom: 50vh;
+        }
 
     .about-container {
         display: grid;
