--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -15,6 +15,10 @@
             padding-top: 10vh;
         }
 
+        @include smartphone-horizontal {
+            padding-top: 15vh;
+        }
+
         h2 {
             font-size: clamp(2rem, 5vw, 3rem);
         }
@@ -74,6 +78,10 @@
                         resize: vertical;
 
                         @include smartphone-small {
+                            height: 100px;
+                        }
+
+                        @include smartphone-horizontal {
                             height: 100px;
                         }
 
